# SIWZ

./: .gitignore  ARCHITECTURE.md  CLASSIFICATION_README.md  CLASSIFICATION_SUMMARY.md  CONTRIBUTING.md  DICTIONARY_LOADER_README.md  MODELS_CHANGELOG.md  Makefile  Notatnik_do_szybkich_testów.ipynb  PDF_LOADER_README.md  PREPROCESS_README.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SEGMENTER_SUMMARY.md  STRESZCZENIE_PRAC.md  ToDo  VARIANT_AGGREGATOR_README.md  VARIANT_AGGREGATOR_SUMMARY.md  opz_cache.pkl  pyproject.toml  requirements.txt  rysowanie.excalidraw  setup.py  siwz_pipeline_context.md
config/: default_config.yaml
data/: .gitkeep  example_ground_truth.json
data/examples/: OPZ_manual_variant_items.json  OPZ_manual_variant_items_full.json  OPZ_wybrane_strony_with_predictions.json  OPZ_wybrane_strony_with_predictions_v2.json  OPZ_wybrane_strony_with_predictions_v3.json  Zał. nr 1 do SWZ - OPZ-Zad.1 - po zm. 21.04.2021.pdf.full_report.json  icd-9_pl_cm__v_5.80.xlsx  kody_mapowanie.xlsx  variant1_mappings_v0_1.json  variant1_mappings_v0_3.json  wariantV1.txt
data/manual/: manual_services.csv
examples/: classify_segments_example.py  example_output.json  load_dictionary_example.py  load_pdf_example.py  preprocess_example.py  validate_output.py  variant_aggregator_example.py
scripts/: _evaluate.py  _run_pipeline.py  build_manual_variant_items.py  create_test_pdf.py  inspect_blocks_report.py  inspect_pdf.py
src/siwz_mapper/: __init__.py  config.py  models.py
src/siwz_mapper/eval/: codebook.py  eval_all_strategies.py  manual_items.py  metrics.py  runner.py  strategies.py
src/siwz_mapper/io/: __init__.py  dictionary_loader.py  pdf_loader.py
src/siwz_mapper/llm/: __init__.py  block_classifier.py  classify_segments.py  client.py  gpt_client.py  prompts.py  service_block_classifier.py
tests/: __init__.py  test_classify_segments.py  test_core_models.py  test_dictionary_loader.py  test_models.py  test_normalizer.py  test_pdf_loader.py  test_pipeline.py  test_segmenter.py  test_variant_aggregator.py
tests/fixtures/: sample_services.json  services_semicolon.csv  services_v1.0.csv  services_with_issues.csv
(+13 files in other folders)
